--- a/Registration-and-Login-using-MERN-stack-master/public/index.html
+++ b/Registration-and-Login-using-MERN-stack-master/public/index.html
@@ -6,12 +6,13 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
-<!-- PAste here -->
+        <meta name="theme-color" content="#000000" />
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<title>React App</title>
+	</head>
+	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div> 	
 		
-		
-		
-		
-		
-<!---------------- -->		
 	</body>
 </html>
